# robo_automation_test_kit

./: .env  .env.uat  .gitignore  LICENSE  MANIFEST.in  README.md  conftest.py  kill_browser.cmd  pyproject.toml  pytest.ini  requirements.txt  setup.cmd  setup.py
.github/: copilot-instructions.md
data/: RoboTestData.csv  TestData.csv
robo_automation_test_kit/: __init__.py  hookspec.py  plugin.py
robo_automation_test_kit/templates/html_report/: html_template.html
robo_automation_test_kit/templates/html_report/components/: category-chart.html  center-chart.html  phase-chart.html  results-table.html  status-center-chart.html  summary-chart.html
robo_automation_test_kit/templates/html_report/scripts/css/: report.css  robo-fonts.css
robo_automation_test_kit/templates/html_report/scripts/js/: report.js
robo_automation_test_kit/utils/: RoboHelper.py  __init__.py  kill_stale_browsers.py
robo_automation_test_kit/utils/reports/: HtmlReportUtils.py  __init__.py
scripts/: kill_stale_browsers.py  setup.py
tests/: test_Template.py
