[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "robo-automation-test-kit"
version = "1.0.6"
description = "Complete automation testing starter kit with pytest plugin, HTML reports, charts, and parallel execution support"
readme = "README.md"
authors = ["Dinil Mithra <dinilmithra.mailme@gmail.com>"]
license = "Apache-2.0"
keywords = ["pytest", "reporting", "html", "charts", "visualization", "test-automation", "robo"]
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
packages = [
    { include = "robo_automation_test_kit" }
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = ">=2.2.0"
openpyxl = ">=3.1.2"
python-dotenv = ">=1.0.0"
jinja2 = ">=3.0.0"

[tool.poetry.extras]
pytest = ["pytest"]
selenium = ["selenium"]
parallel = ["pytest-xdist"]
utils = ["psutil"]

[tool.poetry.group.dev.dependencies]
poetry = ">=1.7.0"
setuptools = ">=65.0.0"
pytest = ">=7.4.0"
pytest-xdist = ">=3.6.1"
selenium = ">=4.10.0"
psutil = ">=5.9.0"

[tool.poetry.plugins."pytest11"]
robo-automation-test-kit = "robo_automation_test_kit.plugin"

[tool.poetry.urls]
Homepage = "https://github.com/yourusername/robo-automation-test-kit"
Documentation = "https://github.com/yourusername/robo-automation-test-kit#readme"
Repository = "https://github.com/yourusername/robo-automation-test-kit"
"Bug Tracker" = "https://github.com/yourusername/robo-automation-test-kit/issues"
